# AMR_Tracker

./: .gitignore  .gitmodules  AMR_TRACKING_PIPELINE.md  README.md  README_Novitec_Camera.md  agv_system.py  calibration_data.json  main.py  model_config.json  pyproject.toml  requirements.txt  run_server.cmd  run_server.py  sequence_loader.py  test_client.py  test_config.json  tracker_config.json
calibration/: __init__.py  camera_calibrator.py  homography_calibrator.py
config/: __init__.py  camera1_config.json  camera1_config_homography.json  camera2_config.json  camera2_config_homography.json  camera3_config.json  camera3_config_homography.json  camera_config.json  config.py  zoom1.json  zoom2.json  zoom3.json
detection/: __init__.py  agv_detector.py
measurement/: __init__.py  size_measurement.py  speed_tracker.py
scripts/: calc_pixelsize.py  pixel_distance_mapper.py  run_calibration.py  test_frame_buffer.py  trajectory_repeatability.py  undistort_images.py
setup/: install_all_cuda.bat  install_cuda_12.8.bat  install_cudnn.bat  install_pytorch_cuda128.bat  install_vcredist.bat  verify_pytorch.py
src/: __init__.py
src/core/: __init__.py  amr_tracker.py
src/server/: camera_manager.py  camera_state.py  model_config.py  response_builder.py  tracking_manager.py  vision_server.py
src/utils/: __init__.py  config_loader.py  novitec_camera_loader.py  sequence_loader.py  trajectory_repeatability.py
src/visualization/: display.py
tests/: test_novitec_integration.py
utils/: __init__.py  config.py
visualization/: __init__.py  display.py
(+20 files in other folders)
