[project]
name = "amr-tracker"
version = "0.1.0"
description = "AMR tracking with position, velocity, and orientation using Kalman filter"
authors = [
    {name = "AMR Tracker Developer", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.21.0",
    "filterpy>=1.4.5",
    "ultralytics>=8.0.0",
    "matplotlib>=3.5.0",
    "pybind11>=2.10.0",
    "cmake>=3.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

